Mon Jan 12 00:30:36 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in fixed an ugly bug, that accoured, when
	qt_libraries is not set (empty/equals X11/not necessary)
	
	* acinclude.m4.in moved the remove of the files after the error
	detection 
	

Sun Jan 11 17:27:53 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in added a new macro KDE_CHECK_QT_DIRECT to unset
	the Qt library path, if a Qt program compiles without them
		
	* acinclude.m4.in added a return value in the CREATE_KFSSTND
	macro. Perhaps this has caused the problems

Sat Jan 10 17:40:44 1998  Stephan Kulow  <coolo@kde.org>

	* ChangeLog started to maintain a ChangeLog file again
	* acinclude.m4.in the AC_CREATE_KFSSTND to get better debug output
	to find the problem
	

Old logs, Stephan Kulow made:
	
0.1 : first steps with libkde
0.2 : first release with libkde, khtmlw, kdehelp, acli, kwm, kpanel
0.3 : added kfm and bugfixes
0.4 : updated khtmlw, kdehelp, kwm, changed install in all subdirs
0.5 : support libtool (chooseable shared libs)
0.6 : split libkde in kdecore and kdeui 
0.6.1 : Bugfixes
0.7 : added code from Janos Farkas (configure)
    : added @{kde,qt}_{includes,libraries}@
0.7.1: Bugfixes
0.7.2: Bugfixes
0.7.3: added @all_includes@ and @all_libraries@
       replaced all incompatible flags like $(CC) and -DHAVE_UNISTD_H
0.7.4: changed support for libkde (back in it's own)
       added kpat
       updated kpanel, kwm, kghostview
0.8: removed a bug in kghostview
	lifted installation process of several apps
	splitt kdebase into kdelibs and kdeapps	
	updated khtmlw, kfm and kdehelp
	added kcalc and kpaint
	updated kdisplay
	added kscreensaver
	added --enable-kscreensaver
	added --enable-debug (and @CXXFLAGS@ to all Makefile.ins)
	updated kwm to 0.4.7
	added make uninstall to every app
	added kvt
	added khexdit
	added .kdelnk for kmines, kedit, ktetris
	put kwm, kfind's .kdelnk in the right directories
	replaced --enable-kscreensaver by --disable-kscreensaver
	updated kpanel to 0.15